--- a/WebApp/views/partials/index.ejs
+++ b/WebApp/views/partials/index.ejs
@@ -7,6 +7,7 @@
     <div class="Map_Region">
         <div class="Map_Header">
             <h2>Current Map Location</h2>
+            <h6>Try it yourself at: 10.131.6.208:8080/location</h6>
         </div>
         <div Id="Google_Map"></div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
